refactor(infrastructure): 重构AI CLI RAG仓库的文档更新功能