@@ -6,11 +6,12 @@ import cn.bugstack.ai.infrastructure.dao.*;
 import cn.bugstack.ai.infrastructure.dao.po.*;
 import com.alibaba.fastjson.JSON;
 import com.alibaba.fastjson.TypeReference;
-import com.fasterxml.jackson.databind.ObjectMapper;
+import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
 import jakarta.annotation.Resource;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Repository;
 
+import java.time.LocalDateTime;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -128,26 +129,23 @@ public class AgentRepository implements IAgentRepository {
                         // 3. 查询该模型关联的tool_mcp配置
                         List<AiClientConfig> toolMcpConfigs = aiClientConfigDao.queryBySourceTypeAndId(AI_CLIENT_MODEL.getCode(), modelId);
                         List<String> toolMcpIds = new ArrayList<>();
-
                         for (AiClientConfig toolMcpConfig : toolMcpConfigs) {
                             if (AI_CLIENT_TOOL_MCP.getCode().equals(toolMcpConfig.getTargetType()) && toolMcpConfig.getStatus() == 1) {
                                 toolMcpIds.add(toolMcpConfig.getTargetId());
                             }
                         }
 
-                        // 4. 转换为VO对象
+                        // 4. 构建模型VO
                         AiClientModelVO modelVO = AiClientModelVO.builder()
                                 .modelId(model.getModelId())
-                                .apiId(model.getApiId())
                                 .modelName(model.getModelName())
+                                .apiId(model.getApiId())
                                 .modelType(model.getModelType())
-                                .toolMcpIds(toolMcpIds)
+                                .typeName(model.getTypeName())
+                                .status(model.getStatus())
                                 .build();
 
-                        // 避免重复添加相同的模型配置
-                        if (result.stream().noneMatch(vo -> vo.getModelId().equals(modelVO.getModelId()))) {
-                            result.add(modelVO);
-                        }
+                        result.add(modelVO);
                     }
                 }
             }
@@ -163,65 +161,31 @@ public class AgentRepository implements IAgentRepository {
         }
 
         List<AiClientToolMcpVO> result = new ArrayList<>();
-        Set<String> processedMcpIds = new HashSet<>();
 
         for (String clientId : clientIdList) {
-            // 1. 通过clientId查询关联的model配置
-            List<AiClientConfig> clientConfigs = aiClientConfigDao.queryBySourceTypeAndId(AI_CLIENT.getCode(), clientId);
+            // 1. 通过clientId查询关联的modelId
+            List<AiClientConfig> configs = aiClientConfigDao.queryBySourceTypeAndId(AI_CLIENT.getCode(), clientId);
 
-            for (AiClientConfig clientConfig : clientConfigs) {
-                if (AI_CLIENT_MODEL.getCode().equals(clientConfig.getTargetType()) && clientConfig.getStatus() == 1) {
-                    String modelId = clientConfig.getTargetId();
+            for (AiClientConfig config : configs) {
+                if (AI_CLIENT_MODEL.getCode().equals(config.getTargetType()) && config.getStatus() == 1) {
+                    String modelId = config.getTargetId();
 
-                    // 2. 通过modelId查询关联的tool_mcp配置
-                    List<AiClientConfig> modelConfigs = aiClientConfigDao.queryBySourceTypeAndId(AI_CLIENT_MODEL.getCode(), modelId);
+                    // 2. 查询该模型关联的tool_mcp配置
+                    List<AiClientConfig> toolMcpConfigs = aiClientConfigDao.queryBySourceTypeAndId(AI_CLIENT_MODEL.getCode(), modelId);
+                    for (AiClientConfig toolMcpConfig : toolMcpConfigs) {
+                        if (AI_CLIENT_TOOL_MCP.getCode().equals(toolMcpConfig.getTargetType()) && toolMcpConfig.getStatus() == 1) {
+                            String toolMcpId = toolMcpConfig.getTargetId();
 
-                    for (AiClientConfig modelConfig : modelConfigs) {
-                        if (AI_CLIENT_TOOL_MCP.getCode().equals(modelConfig.getTargetType()) && modelConfig.getStatus() == 1) {
-                            String mcpId = modelConfig.getTargetId();
-
-                            // 避免重复处理相同的mcpId
-                            if (processedMcpIds.contains(mcpId)) {
-                                continue;
-                            }
-                            processedMcpIds.add(mcpId);
-
-                            // 3. 通过mcpId查询ai_client_tool_mcp表获取MCP工具配置
-                            AiClientToolMcp toolMcp = aiClientToolMcpDao.queryByMcpId(mcpId);
+                            // 3. 查询tool_mcp配置信息
+                            AiClientToolMcp toolMcp = aiClientToolMcpDao.queryByMcpId(toolMcpId);
                             if (toolMcp != null && toolMcp.getStatus() == 1) {
-                                // 4. 转换为VO对象
-                                AiClientToolMcpVO mcpVO = AiClientToolMcpVO.builder()
-                                        .mcpId(toolMcp.getMcpId())
-                                        .mcpName(toolMcp.getMcpName())
+                                AiClientToolMcpVO toolMcpVO = AiClientToolMcpVO.builder()
+                                        .toolMcpId(toolMcp.getMcpId())
+                                        .toolMcpName(toolMcp.getMcpName())
                                         .transportType(toolMcp.getTransportType())
-                                        .transportConfig(toolMcp.getTransportConfig())
-                                        .requestTimeout(toolMcp.getRequestTimeout())
                                         .build();
 
-                                String transportConfig = toolMcp.getTransportConfig();
-                                String transportType = toolMcp.getTransportType();
-
-                                try {
-                                    if ("sse".equals(transportType)) {
-                                        // 解析SSE配置
-                                        ObjectMapper objectMapper = new ObjectMapper();
-                                        AiClientToolMcpVO.TransportConfigSse transportConfigSse = objectMapper.readValue(transportConfig, AiClientToolMcpVO.TransportConfigSse.class);
-                                        mcpVO.setTransportConfigSse(transportConfigSse);
-                                    } else if ("stdio".equals(transportType)) {
-                                        // 解析STDIO配置
-                                        Map<String, AiClientToolMcpVO.TransportConfigStdio.Stdio> stdio = JSON.parseObject(transportConfig,
-                                                new TypeReference<>() {
-                                                });
-
-                                        AiClientToolMcpVO.TransportConfigStdio transportConfigStdio = new AiClientToolMcpVO.TransportConfigStdio();
-                                        transportConfigStdio.setStdio(stdio);
-
-                                        mcpVO.setTransportConfigStdio(transportConfigStdio);
-                                    }
-                                } catch (Exception e) {
-                                    log.error("解析传输配置失败: {}", e.getMessage(), e);
-                                }
-                                result.add(mcpVO);
+                                result.add(toolMcpVO);
                             }
                         }
                     }
@@ -239,34 +203,35 @@ public class AgentRepository implements IAgentRepository {
         }
 
         List<AiClientSystemPromptVO> result = new ArrayList<>();
-        Set<String> processedPromptIds = new HashSet<>();
 
         for (String clientId : clientIdList) {
-            // 1. 通过clientId查询关联的prompt配置
+            // 1. 通过clientId查询关联的modelId
             List<AiClientConfig> configs = aiClientConfigDao.queryBySourceTypeAndId(AI_CLIENT.getCode(), clientId);
 
             for (AiClientConfig config : configs) {
-                if ("prompt".equals(config.getTargetType()) && config.getStatus() == 1) {
-                    String promptId = config.getTargetId();
+                if (AI_CLIENT_MODEL.getCode().equals(config.getTargetType()) && config.getStatus() == 1) {
+                    String modelId = config.getTargetId();
 
-                    // 避免重复处理相同的promptId
-                    if (processedPromptIds.contains(promptId)) {
-                        continue;
-                    }
-                    processedPromptIds.add(promptId);
+                    // 2. 查询该模型关联的system_prompt配置
+                    List<AiClientConfig> promptConfigs = aiClientConfigDao.queryBySourceTypeAndId(AI_CLIENT_MODEL.getCode(), modelId);
+                    for (AiClientConfig promptConfig : promptConfigs) {
+                        if (AI_CLIENT_SYSTEM_PROMPT.getCode().equals(promptConfig.getTargetType()) && promptConfig.getStatus() == 1) {
+                            String promptId = promptConfig.getTargetId();
 
-                    // 2. 通过promptId查询ai_client_system_prompt表获取系统提示词配置
-                    AiClientSystemPrompt systemPrompt = aiClientSystemPromptDao.queryByPromptId(promptId);
-                    if (systemPrompt != null && systemPrompt.getStatus() == 1) {
-                        // 3. 转换为VO对象
-                        AiClientSystemPromptVO promptVO = AiClientSystemPromptVO.builder()
-                                .promptId(systemPrompt.getPromptId())
-                                .promptName(systemPrompt.getPromptName())
-                                .promptContent(systemPrompt.getPromptContent())
-                                .description(systemPrompt.getDescription())
-                                .build();
+                            // 3. 查询system_prompt配置信息
+                            AiClientSystemPrompt prompt = aiClientSystemPromptDao.queryByPromptId(promptId);
+                            if (prompt != null && prompt.getStatus() == 1) {
+                                AiClientSystemPromptVO promptVO = AiClientSystemPromptVO.builder()
+                                        .promptId(prompt.getPromptId())
+                                        .promptName(prompt.getPromptName())
+                                        .promptContent(prompt.getPromptContent())
+                                        .description(prompt.getDescription())
+                                        .status(prompt.getStatus())
+                                        .build();
 
-                        result.add(promptVO);
+                                result.add(promptVO);
+                            }
+                        }
                     }
                 }
             }
@@ -277,23 +242,46 @@ public class AgentRepository implements IAgentRepository {
 
     @Override
     public Map<String, AiClientSystemPromptVO> queryAiClientSystemPromptMapByClientIds(List<String> clientIdList) {
-        List<AiClientSystemPromptVO> aiClientSystemPrompts = AiClientSystemPromptVOByClientIds(clientIdList);
-
-        if (null == aiClientSystemPrompts || aiClientSystemPrompts.isEmpty()) {
-            return Collections.emptyMap();
+        if (clientIdList == null || clientIdList.isEmpty()) {
+            return Map.of();
         }
 
-        // 将PO对象转换为VO对象，并构建Map结构
-        return aiClientSystemPrompts.stream()
-                .map(prompt -> AiClientSystemPromptVO.builder()
-                        .promptId(prompt.getPromptId())
-                        .promptContent(prompt.getPromptContent())
-                        .build())
-                .collect(Collectors.toMap(
-                        AiClientSystemPromptVO::getPromptId,  // key: id
-                        prompt -> prompt,               // value: AiClientSystemPromptVO对象
-                        (existing, replacement) -> existing  // 如果有重复key，保留第一个
-                ));
+        Map<String, AiClientSystemPromptVO> result = new HashMap<>();
+
+        for (String clientId : clientIdList) {
+            // 1. 通过clientId查询关联的modelId
+            List<AiClientConfig> configs = aiClientConfigDao.queryBySourceTypeAndId(AI_CLIENT.getCode(), clientId);
+
+            for (AiClientConfig config : configs) {
+                if (AI_CLIENT_MODEL.getCode().equals(config.getTargetType()) && config.getStatus() == 1) {
+                    String modelId = config.getTargetId();
+
+                    // 2. 查询该模型关联的system_prompt配置
+                    List<AiClientConfig> promptConfigs = aiClientConfigDao.queryBySourceTypeAndId(AI_CLIENT_MODEL.getCode(), modelId);
+                    for (AiClientConfig promptConfig : promptConfigs) {
+                        if (AI_CLIENT_SYSTEM_PROMPT.getCode().equals(promptConfig.getTargetType()) && promptConfig.getStatus() == 1) {
+                            String promptId = promptConfig.getTargetId();
+
+                            // 3. 查询system_prompt配置信息
+                            AiClientSystemPrompt prompt = aiClientSystemPromptDao.queryByPromptId(promptId);
+                            if (prompt != null && prompt.getStatus() == 1) {
+                                AiClientSystemPromptVO promptVO = AiClientSystemPromptVO.builder()
+                                        .promptId(prompt.getPromptId())
+                                        .promptName(prompt.getPromptName())
+                                        .promptContent(prompt.getPromptContent())
+                                        .description(prompt.getDescription())
+                                        .status(prompt.getStatus())
+                                        .build();
+
+                                result.put(clientId, promptVO);
+                            }
+                        }
+                    }
+                }
+            }
+        }
+
+        return result;
     }
 
     @Override
@@ -303,59 +291,49 @@ public class AgentRepository implements IAgentRepository {
         }
 
         List<AiClientAdvisorVO> result = new ArrayList<>();
-        Set<String> processedAdvisorIds = new HashSet<>();
 
         for (String clientId : clientIdList) {
-            // 1. 查询客户端相关的advisor配置
-            List<AiClientConfig> configs = aiClientConfigDao.queryBySourceTypeAndId("client", clientId);
+            // 1. 通过clientId查询关联的advisor配置
+            List<AiClientConfig> configs = aiClientConfigDao.queryBySourceTypeAndId(AI_CLIENT.getCode(), clientId);
 
             for (AiClientConfig config : configs) {
-                if (config.getStatus() != 1 || !"advisor".equals(config.getTargetType())) {
-                    continue;
-                }
+                if (AI_CLIENT_ADVISOR.getCode().equals(config.getTargetType()) && config.getStatus() == 1) {
+                    String advisorId = config.getTargetId();
 
-                String advisorId = config.getTargetId();
-                if (processedAdvisorIds.contains(advisorId)) {
-                    continue;
-                }
-                processedAdvisorIds.add(advisorId);
+                    // 2. 查询advisor配置信息
+                    AiClientAdvisor advisor = aiClientAdvisorDao.queryByAdvisorId(advisorId);
+                    if (advisor != null && advisor.getStatus() == 1) {
+                        // 3. 解析extParam中的配置
+                        AiClientAdvisorVO.ChatMemory chatMemory = null;
+                        AiClientAdvisorVO.RagAnswer ragAnswer = null;
 
-                // 2. 查询advisor详细信息
-                AiClientAdvisor aiClientAdvisor = aiClientAdvisorDao.queryByAdvisorId(advisorId);
-                if (aiClientAdvisor == null || aiClientAdvisor.getStatus() != 1) {
-                    continue;
-                }
-
-                // 3. 解析extParam中的配置
-                AiClientAdvisorVO.ChatMemory chatMemory = null;
-                AiClientAdvisorVO.RagAnswer ragAnswer = null;
-
-                String extParam = aiClientAdvisor.getExtParam();
-                if (extParam != null && !extParam.trim().isEmpty()) {
-                    try {
-                        if ("ChatMemory".equals(aiClientAdvisor.getAdvisorType())) {
-                            // 解析chatMemory配置
-                            chatMemory = JSON.parseObject(extParam, AiClientAdvisorVO.ChatMemory.class);
-                        } else if ("RagAnswer".equals(aiClientAdvisor.getAdvisorType())) {
-                            // 解析ragAnswer配置
-                            ragAnswer = JSON.parseObject(extParam, AiClientAdvisorVO.RagAnswer.class);
+                        String extParam = advisor.getExtParam();
+                        if (extParam != null && !extParam.trim().isEmpty()) {
+                            try {
+                                if ("ChatMemory".equals(advisor.getAdvisorType())) {
+                                    // 解析chatMemory配置
+                                    chatMemory = JSON.parseObject(extParam, AiClientAdvisorVO.ChatMemory.class);
+                                } else if ("RagAnswer".equals(advisor.getAdvisorType())) {
+                                    // 解析ragAnswer配置
+                                    ragAnswer = JSON.parseObject(extParam, AiClientAdvisorVO.RagAnswer.class);
+                                }
+                            } catch (Exception e) {
+                                // 解析失败时忽略，使用默认值null
+                            }
                         }
-                    } catch (Exception e) {
-                        // 解析失败时忽略，使用默认值null
+
+                        AiClientAdvisorVO advisorVO = AiClientAdvisorVO.builder()
+                                .advisorId(advisor.getAdvisorId())
+                                .advisorName(advisor.getAdvisorName())
+                                .advisorType(advisor.getAdvisorType())
+                                .orderNum(advisor.getOrderNum())
+                                .chatMemory(chatMemory)
+                                .ragAnswer(ragAnswer)
+                                .build();
+
+                        result.add(advisorVO);
                     }
                 }
-
-                // 4. 构建AiClientAdvisorVO对象
-                AiClientAdvisorVO advisorVO = AiClientAdvisorVO.builder()
-                        .advisorId(aiClientAdvisor.getAdvisorId())
-                        .advisorName(aiClientAdvisor.getAdvisorName())
-                        .advisorType(aiClientAdvisor.getAdvisorType())
-                        .orderNum(aiClientAdvisor.getOrderNum())
-                        .chatMemory(chatMemory)
-                        .ragAnswer(ragAnswer)
-                        .build();
-
-                result.add(advisorVO);
             }
         }
 
@@ -369,61 +347,19 @@ public class AgentRepository implements IAgentRepository {
         }
 
         List<AiClientVO> result = new ArrayList<>();
-        Set<String> processedClientIds = new HashSet<>();
 
         for (String clientId : clientIdList) {
-            if (processedClientIds.contains(clientId)) {
-                continue;
-            }
-            processedClientIds.add(clientId);
-
-            // 1. 查询客户端基本信息
             AiClient aiClient = aiClientDao.queryByClientId(clientId);
-            if (aiClient == null || aiClient.getStatus() != 1) {
-                continue;
+            if (aiClient != null && aiClient.getStatus() == 1) {
+                AiClientVO clientVO = AiClientVO.builder()
+                        .clientId(aiClient.getClientId())
+                        .clientName(aiClient.getClientName())
+                        .clientDesc(aiClient.getClientDesc())
+                        .status(aiClient.getStatus())
+                        .build();
+
+                result.add(clientVO);
             }
-
-            // 2. 查询客户端相关配置
-            List<AiClientConfig> configs = aiClientConfigDao.queryBySourceTypeAndId("client", clientId);
-
-            String modelId = null;
-            List<String> promptIdList = new ArrayList<>();
-            List<String> mcpIdList = new ArrayList<>();
-            List<String> advisorIdList = new ArrayList<>();
-
-            for (AiClientConfig config : configs) {
-                if (config.getStatus() != 1) {
-                    continue;
-                }
-
-                switch (config.getTargetType()) {
-                    case "model":
-                        modelId = config.getTargetId();
-                        break;
-                    case "prompt":
-                        promptIdList.add(config.getTargetId());
-                        break;
-                    case "tool_mcp":
-                        mcpIdList.add(config.getTargetId());
-                        break;
-                    case "advisor":
-                        advisorIdList.add(config.getTargetId());
-                        break;
-                }
-            }
-
-            // 3. 构建AiClientVO对象
-            AiClientVO aiClientVO = AiClientVO.builder()
-                    .clientId(aiClient.getClientId())
-                    .clientName(aiClient.getClientName())
-                    .description(aiClient.getDescription())
-                    .modelId(modelId)
-                    .promptIdList(promptIdList)
-                    .mcpIdList(mcpIdList)
-                    .advisorIdList(advisorIdList)
-                    .build();
-
-            result.add(aiClientVO);
         }
 
         return result;
@@ -446,7 +382,6 @@ public class AgentRepository implements IAgentRepository {
                 // 2. 通过apiId查询API配置信息
                 AiClientApi apiConfig = aiClientApiDao.queryByApiId(apiId);
                 if (apiConfig != null && apiConfig.getStatus() == 1) {
-                    // 3. 转换为VO对象
                     AiClientApiVO apiVO = AiClientApiVO.builder()
                             .apiId(apiConfig.getApiId())
                             .baseUrl(apiConfig.getBaseUrl())
@@ -455,7 +390,6 @@ public class AgentRepository implements IAgentRepository {
                             .embeddingsPath(apiConfig.getEmbeddingsPath())
                             .build();
 
-                    // 避免重复添加相同的API配置
                     if (result.stream().noneMatch(vo -> vo.getApiId().equals(apiVO.getApiId()))) {
                         result.add(apiVO);
                     }
@@ -475,21 +409,18 @@ public class AgentRepository implements IAgentRepository {
         List<AiClientModelVO> result = new ArrayList<>();
 
         for (String modelId : modelIdList) {
-            // 通过modelId查询模型配置
             AiClientModel model = aiClientModelDao.queryByModelId(modelId);
             if (model != null && model.getStatus() == 1) {
-                // 转换为VO对象
                 AiClientModelVO modelVO = AiClientModelVO.builder()
                         .modelId(model.getModelId())
-                        .apiId(model.getApiId())
                         .modelName(model.getModelName())
+                        .apiId(model.getApiId())
                         .modelType(model.getModelType())
+                        .typeName(model.getTypeName())
+                        .status(model.getStatus())
                         .build();
 
-                // 避免重复添加相同的模型配置
-                if (result.stream().noneMatch(vo -> vo.getModelId().equals(modelVO.getModelId()))) {
-                    result.add(modelVO);
-                }
+                result.add(modelVO);
             }
         }
 
@@ -498,19 +429,8 @@ public class AgentRepository implements IAgentRepository {
 
     @Override
     public Map<String, AiAgentClientFlowConfigVO> queryAiAgentClientFlowConfig(String aiAgentId) {
-        if (aiAgentId == null || aiAgentId.trim().isEmpty()) {
-            return Map.of();
-        }
-
         try {
-            // 根据智能体ID查询流程配置列表
             List<AiAgentFlowConfig> flowConfigs = aiAgentFlowConfigDao.queryByAgentId(aiAgentId);
-
-            if (flowConfigs == null || flowConfigs.isEmpty()) {
-                return Map.of();
-            }
-
-            // 转换为Map结构，key为clientId，value为AiAgentClientFlowConfigVO
             Map<String, AiAgentClientFlowConfigVO> result = new HashMap<>();
 
             for (AiAgentFlowConfig flowConfig : flowConfigs) {
@@ -609,6 +529,7 @@ public class AgentRepository implements IAgentRepository {
         aiRagOrder.setRagName(aiRagOrderVO.getRagName());
         aiRagOrder.setKnowledgeTag(aiRagOrderVO.getKnowledgeTag());
         aiRagOrder.setStatus(1);
+        aiRagOrder.setVersion(1);
         aiClientRagOrderDao.insert(aiRagOrder);
     }
 
@@ -647,6 +568,49 @@ public class AgentRepository implements IAgentRepository {
                     .build());
         }
         return aiClientApiVOS;
+    }
+
+    @Override
+    public boolean updateRagOrder(String ragId, String fileHash, String updateReason, Integer version) {
+        LambdaQueryWrapper<AiClientRagOrder> wrapper = new LambdaQueryWrapper<>();
+        wrapper.eq(AiClientRagOrder::getRagId, ragId);
+        
+        AiClientRagOrder order = aiClientRagOrderDao.selectOne(wrapper);
+        if (order == null) {
+            log.error("知识库配置不存在: {}", ragId);
+            return false;
+        }
+
+        order.setVersion(version);
+        order.setFileHash(fileHash);
+        order.setUpdateReason(updateReason);
+        order.setUpdateTime(LocalDateTime.now());
+        
+        int rows = aiClientRagOrderDao.updateById(order);
+        return rows > 0;
+    }
+
+    @Override
+    public AiRagOrderVO queryRagOrderById(String ragId) {
+        LambdaQueryWrapper<AiClientRagOrder> wrapper = new LambdaQueryWrapper<>();
+        wrapper.eq(AiClientRagOrder::getRagId, ragId);
+        
+        AiClientRagOrder order = aiClientRagOrderDao.selectOne(wrapper);
+        if (order == null) {
+            return null;
+        }
+
+        return AiRagOrderVO.builder()
+                .ragId(order.getRagId())
+                .ragName(order.getRagName())
+                .knowledgeTag(order.getKnowledgeTag())
+                .status(order.getStatus())
+                .version(order.getVersion())
+                .fileHash(order.getFileHash())
+                .updateReason(order.getUpdateReason())
+                .createTime(order.getCreateTime())
+                .updateTime(order.getUpdateTime())
+                .build();
     }
 
 }
